[package]
name = "curly"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4" }                   # For CLI args
indicatif = "0.17"                         # For progress bar
ratatui = "0.26"                           # TUI rendering
crossterm = "0.27"                         # Terminal handling
colored = "2.0"                            # For colored output
